test/unittest/error/tst.errorend.r
Error fired
End fired after exit

-- @@stderr --
dtrace: error on enabled probe ID 3 (ID 1: dtrace:::BEGIN): invalid kernel access in action #1 at DIF offset 16
